# Movie_Finder

./: README.md  setup.cfg
src/movie_finder/: .env.example  .gitignore  decorators.py  formatter.py  log_stats.py  log_writer.py  main.py  mysql_connector.py  requiremens.txt  ~$README.md
