[metadata]

name = Movie Finder
version = 0.0.1
author = Very cool guy
author_email = very.cool.guy@gmail.com 
description = Movie Finder 
long_desctiption = file: README.md

[options]
package_dir = 
    = src 
packages = find: 
python_requires = >=3.6

[options.packages.find]
where = src

entry_points={
    "console_scripts": [
        "mf=main:main"]}